--- a/client/src/profielDetail/index.html
+++ b/client/src/profielDetail/index.html
@@ -16,7 +16,7 @@
             rel="stylesheet"
         />
         <script type="module" src="../js/header.js"></script>
-        <script type="module" src="../js/profielDetail.js"></script>
+        <script type="module" src="../js/profielDetails.js"></script>
         <title>Profiel details</title>
     </head>
     <body>
@@ -43,7 +43,7 @@
 
             <main>
                 <section class="profielfoto">
-                    <h1>Tom</h1>
+                    <h1 id="naam">Tom</h1>
 
                     <ul>
                         <li>
@@ -63,7 +63,7 @@
                     </ul>
 
                     <figure>
-                        <img
+                        <img id="foto"
                             src="https://picsum.photos/100/100"
                             alt="profielfoto"
                         />
@@ -73,118 +73,14 @@
                 <section class="activiteiten">
                     <h2>Georganiseerd:</h2>
                     <ul class="scrollable">
-                        <li>
-                            <h3>Piano lessen</h3>
-                            <p>
-                                Leer piano spelen met ondersteuning van een paar
-                                professionele piano leraren
-                            </p>
-                            <div>
-                                <p>
-                                    aantal mensen:
-                                    <span id="aantalMensen">3</span>/<span
-                                        id="maxMensen"
-                                        >20</span
-                                    >
-                                </p>
-                                <p>€<span id="prijs">5</span></p>
-                            </div>
-                        </li>
-
-                        <li>
-                            <h3>Piano lessen</h3>
-                            <p>
-                                Leer piano spelen met ondersteuning van een paar
-                                professionele piano leraren
-                            </p>
-                            <div>
-                                <p>
-                                    aantal mensen:
-                                    <span id="aantalMensen">3</span>/<span
-                                        id="maxMensen"
-                                        >20</span
-                                    >
-                                </p>
-                                <p>€<span id="prijs">5</span></p>
-                            </div>
-                        </li>
-
-                        <li>
-                            <h3>Lopen</h3>
-                            <p>
-                                Leer piano spelen met ondersteuning van een paar
-                                professionele piano leraren
-                            </p>
-                            <div>
-                                <p>
-                                    aantal mensen:
-                                    <span id="aantalMensen">3</span>/<span
-                                        id="maxMensen"
-                                        >20</span
-                                    >
-                                </p>
-                                <p>€<span id="prijs">5</span></p>
-                            </div>
-                        </li>
+                        
                     </ul>
                 </section>
 
                 <section class="activiteiten">
                     <h2>Ingeschreven:</h2>
                     <ul class="scrollable">
-                        <li>
-                            <h3>Piano lessen</h3>
-                            <p>
-                                Leer piano spelen met ondersteuning van een paar
-                                professionele piano leraren
-                            </p>
-                            <div>
-                                <p>
-                                    aantal mensen:
-                                    <span id="aantalMensen">3</span>/<span
-                                        id="maxMensen"
-                                        >20</span
-                                    >
-                                </p>
-                                <p>€<span id="prijs">5</span></p>
-                            </div>
-                        </li>
-
-                        <li>
-                            <h3>Piano lessen</h3>
-                            <p>
-                                Leer piano spelen met ondersteuning van een paar
-                                professionele piano leraren
-                            </p>
-                            <div>
-                                <p>
-                                    aantal mensen:
-                                    <span id="aantalMensen">3</span>/<span
-                                        id="maxMensen"
-                                        >20</span
-                                    >
-                                </p>
-                                <p>€<span id="prijs">5</span></p>
-                            </div>
-                        </li>
-
-                        <li>
-                            <h3>Lopen</h3>
-                            <p>
-                                Leer piano spelen met ondersteuning van een paar
-                                professionele piano leraren
-                            </p>
-                            <div>
-                                <p>
-                                    aantal mensen:
-                                    <span id="aantalMensen">3</span>/<span
-                                        id="maxMensen"
-                                        >20</span
-                                    >
-                                </p>
-                                <p>€<span id="prijs">5</span></p>
-                            </div>
-                        </li>
+                        
                     </ul>
                 </section>
             </main>
