--- a/client/src/activiteitMaken/index.html
+++ b/client/src/activiteitMaken/index.html
@@ -16,6 +16,7 @@
             rel="stylesheet"
         />
         <script type="module" src="../js/header.js"></script>
+        <script type="module" src="../js/formvalidator/activiteitmaken.js"></script>
         <title>Activiteit aanmaken</title>
     </head>
     <body>
@@ -93,6 +94,7 @@
                     <div>
                         <label for="prijs">
                             <span class="field-label">Prijs:</span>
+                            <span class="field-hint">in euro</span>
                         </label>
                         <input
                             type="number"
