--- a/client/src/bewoners/index.html
+++ b/client/src/bewoners/index.html
@@ -16,6 +16,7 @@
             rel="stylesheet"
         />
         <script type="module" src="../js/header.js"></script>
+        <script type="module" src="../js/bewoners.js"></script>
         <title>Bewoners</title>
     </head>
     <body>
@@ -42,14 +43,14 @@
             </header>
 
             <main>
-                <section class="banner">
+                <section class="banner" id="banner">
                     <div>
                         <h1>Welkom</h1>
                         <h2>
                             Maak nu een account en voeg je toe aan onze buurt
                         </h2>
-                        <a class="button" href="../login/"
-                            >Klik hier om je in te loggen</a
+                        <button class="button" id="inloggen"
+                            >Klik hier om je in te loggen</button
                         >
                     </div>
                 </section>
@@ -57,53 +58,6 @@
                 <section class="bewoners">
                     <h2 class="hidden">Leer ons kennen</h2>
                     <ul>
-                        <li class="profilepicture">
-                            <h3>Tom</h3>
-                            <img
-                                src="https://picsum.photos/100/100"
-                                alt="Profielfoto"
-                            />
-                        </li>
-
-                        <li class="profilepicture">
-                            <h3>Tom</h3>
-                            <img
-                                src="https://picsum.photos/100/100"
-                                alt="Profielfoto"
-                            />
-                        </li>
-
-                        <li class="profilepicture">
-                            <h3>Tom</h3>
-                            <img
-                                src="https://picsum.photos/100/100"
-                                alt="Profielfoto"
-                            />
-                        </li>
-
-                        <li class="profilepicture">
-                            <h3>Tom</h3>
-                            <img
-                                src="https://picsum.photos/100/100"
-                                alt="Profielfoto"
-                            />
-                        </li>
-
-                        <li class="profilepicture">
-                            <h3>Tom</h3>
-                            <img
-                                src="https://picsum.photos/100/100"
-                                alt="Profielfoto"
-                            />
-                        </li>
-
-                        <li class="profilepicture">
-                            <h3>Tom</h3>
-                            <img
-                                src="https://picsum.photos/100/100"
-                                alt="Profielfoto"
-                            />
-                        </li>
                     </ul>
                 </section>
             </main>
