--- a/client/src/home/index.html
+++ b/client/src/home/index.html
@@ -16,7 +16,8 @@
             rel="stylesheet"
         />
         <script type="module" src="../js/header.js"></script>
-        <script type="module" src="../js/main.js"></script>
+        <script type="module" src="../js/activiteiten.js"></script>
+        <script type="module" src="../js/bewoners.js"></script>
         <title>Home</title>
     </head>
     <body>
@@ -33,10 +34,10 @@
                     </button>
                     <nav>
                         <ul>
-                            <li><a class="active" href="./">Home</a></li>
-                            <li><a href="./activiteiten/">Activiteiten</a></li>
-                            <li><a href="./bewoners/">Bewoners</a></li>
-                            <li><a href="./profiel/">Profiel</a></li>
+                            <li><a class="active" href="../home">Home</a></li>
+                            <li><a href="../activiteiten/">Activiteiten</a></li>
+                            <li><a href="../bewoners/">Bewoners</a></li>
+                            <li><a href="../profiel/">Profiel</a></li>
                         </ul>
                     </nav>
                 </div>
