--- a/client/src/profielDetail/index.html
+++ b/client/src/profielDetail/index.html
@@ -42,7 +42,7 @@
             </header>
 
             <main>
-                <section class="profielfoto">
+                <section class="profilepicture">
                     <h1 id="naam">Tom</h1>
 
                     <ul>
