--- a/client/src/registreer/index.html
+++ b/client/src/registreer/index.html
@@ -18,6 +18,8 @@
             href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,300;0,400;0,700;1,400;1,700&display=swap"
             rel="stylesheet"
         />
+
+        <script src="../js/formvalidator/registerForm.js" type="module"></script>
         <title>Neighbourhoods</title>
     </head>
     <body>
@@ -25,7 +27,7 @@
             <header></header>
             <main>
                 <h1 class="logo" href="">Neighbourhoods</h1>
-                <form action="" id="profiel">
+                <form action="" id="registreer">
                     <div
                         class="errorSummary"
                         role="group"
