--- a/client/src/index.html
+++ b/client/src/index.html
@@ -8,15 +8,14 @@
             href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css"
             rel="stylesheet"
         />
-        <link href="../style.css" rel="stylesheet" />
+        <link href="style.css" rel="stylesheet" />
         <link href="https://fonts.googleapis.com" rel="preconnect" />
         <link crossorigin href="https://fonts.gstatic.com" rel="preconnect" />
         <link
             href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,300;0,400;0,700;1,400;1,700&display=swap"
             rel="stylesheet"
         />
-        <script type="module" src="../js/header.js"></script>
-        <script type="module" src="../js/main.js"></script>
+        <script type="module" src="js/landingspage.js"></script>
         <title>Home</title>
     </head>
     <body>
