--- a/client/src/profiel/index.html
+++ b/client/src/profiel/index.html
@@ -16,6 +16,7 @@
             rel="stylesheet"
         />
         <script type="module" src="../js/header.js"></script>
+        <script type="module" src="../js/profiel.js"></script>
         <title>Profiel</title>
     </head>
     <body>
@@ -42,118 +43,88 @@
             </header>
 
             <main>
-                <form action="" id="profiel">
-                    <h1 class="hidden">Profiel</h1>
-                    <div
-                        class="errorSummary"
-                        role="group"
-                        aria-labelledby="errorSummary-heading"
-                        tabindex="-1"
-                    >
-                        <h2 id="errorSummary-heading">Er is een probleem</h2>
-                        <ul></ul>
-                    </div>
-                    <div class="profielfoto">
-                        <label for="profielfoto" class="button"
-                            >change picture</label
+                <div class="form">
+                    <form action="" id="profiel">
+                        <h1 class="hidden">Profiel</h1>
+                        <div
+                                class="errorSummary"
+                                role="group"
+                                aria-labelledby="errorSummary-heading"
+                                tabindex="-1"
                         >
-                        <input
-                            type="file"
-                            id="profielfoto"
-                            name="profielfoto"
-                            accept="image/png, image/jpeg"
-                            class="hidden"
-                            required
-                        />
-                        <figure>
-                            <img
-                                src="https://picsum.photos/100/100"
-                                alt="profielfoto"
+                            <h2 id="errorSummary-heading">Er is een probleem</h2>
+                            <ul></ul>
+                        </div>
+                        <div class="profilepicture">
+                            <label for="profielfoto" class="button"
+                            >Verander foto</label
+                            >
+                            <input
+                                    type="file"
+                                    id="profielfoto"
+                                    name="profielfoto"
+                                    accept="image/png, image/jpeg"
+                                    class="hidden"
                             />
-                        </figure>
-                    </div>
+                            <figure>
+                                <img
+                                        src="/profielfotos/default.png"
+                                        alt="profielfoto"
+                                />
+                            </figure>
+                        </div>
 
-                    <div>
-                        <label for="naam">
-                            <span class="field-label">Naam:</span>
-                        </label>
-                        <input
-                            type="text"
-                            name="naam"
-                            id="naam"
-                            autocomplete="name"
-                            required
-                        />
-                    </div>
+                        <div>
+                            <label for="naam">
+                                <span class="field-label">Naam:</span>
+                            </label>
+                            <input
+                                    type="text"
+                                    name="naam"
+                                    id="naam"
+                                    autocomplete="name"
+                                    required
+                            />
+                        </div>
 
-                    <div>
-                        <label for="email">
-                            <span class="field-label">Email:</span>
-                        </label>
-                        <input
-                            type="email"
-                            name="email"
-                            id="email"
-                            autocomplete="email"
-                            required
-                        />
-                    </div>
+                        <div>
+                            <label for="email">
+                                <span class="field-label">Email:</span>
+                            </label>
+                            <input
+                                    type="email"
+                                    name="email"
+                                    id="email"
+                                    autocomplete="email"
+                                    required
+                            />
+                        </div>
 
-                    <div>
-                        <label for="telefoonnummer">
-                            <span class="field-label">telefoonnummer:</span>
-                        </label>
-                        <input
-                            type="tel"
-                            name="naam"
-                            id="naam"
-                            autocomplete="name"
-                            required
-                        />
-                    </div>
+                        <div>
+                            <label for="telefoonnummer">
+                                <span class="field-label">telefoonnummer:</span>
+                            </label>
+                            <input
+                                    type="tel"
+                                    name="telefoonnummer"
+                                    id="telefoonnummer"
+                                    autocomplete="tel"
+                                    required
+                            />
+                        </div>
 
-                    <fieldset class="wachtwoord">
-                        <legend>
-                            <span class="field-label">wachtwoord</span>
-                        </legend>
+                        <div>
+                            <button class="button" type="submit">
+                                Sla veranderingen op
+                            </button>
+                        </div>
 
-                        <label for="huidigWachtwoord">
-                            <span class="field-label">Huidig wachtwoord:</span>
-                        </label>
-                        <input
-                            type="password"
-                            name="huidigWachtwoord"
-                            id="huidigWachtwoord"
-                            autocomplete="current-password"
-                            required
-                        />
+                    </form>
+                    <button class="button" id="logout">log uit</button>
+                </div>
 
-                        <label for="NieuwWachtwoord">
-                            <span class="field-label">Nieuw wachtwoord:</span>
 
-                            <span class="field-hint">
-                                <p>Een wachtwoord moet minstens bevatten:</p>
-                                <ul>
-                                    <li>7 karakters</li>
-                                    <li>1 cijfer</li>
-                                </ul>
-                            </span>
-                        </label>
-                        <input
-                            type="password"
-                            name="NieuwWachtwoord"
-                            id="NieuwWachtwoord"
-                            autocomplete="new-password"
-                            required
-                        />
-                    </fieldset>
 
-                    <div>
-                        <button class="button" type="submit">
-                            Sla veranderingen op
-                        </button>
-                    </div>
-                </form>
             </main>
 
             <footer>
