--- a/client/src/activiteitDetail/index.html
+++ b/client/src/activiteitDetail/index.html
@@ -63,7 +63,13 @@
                     <div class="kaart">
                         <h3>Locatie:</h3>
                         <p id="locatie"></p>
+
                         <div id="map"></div>
+
+                        <div class="ol-popup">
+                            <a href="#" class="ol-popup-closer"></a>
+                            <div class="popup-content"></div>
+                        </div>
                     </div>
                     <div class="organisatoren">
                         <h3>Organisator:</h3>
@@ -82,7 +88,7 @@
                     </div>
 
                     <div class="deelnemers">
-                        <h3>Mensen die komen:</h3>
+                        <h3>Mensen die komen: <span id="aantalMensen"></span></h3>
                         <ul>
                         </ul>
                     </div>
