--- a/client/src/bewoners/index.html
+++ b/client/src/bewoners/index.html
@@ -57,6 +57,10 @@
 
                 <section class="bewoners">
                     <h2 class="hidden">Leer ons kennen</h2>
+                    <form class="zoek" id="zoek">
+                        <input type="search" name="zoek" id="zoekbar">
+                        <input type="submit" name="sumbit" id="sumbit" value="zoek">
+                    </form>
                     <ul>
                     </ul>
                 </section>
