--- a/client/src/bewoners/index.html
+++ b/client/src/bewoners/index.html
@@ -57,8 +57,14 @@
 
                 <section class="bewoners">
                     <h2 class="hidden">Leer ons kennen</h2>
-                    <form class="zoek" id="zoek">
-                        <input type="search" name="zoek" id="zoekbar">
+                    <form class="zoek" id="zoek" action="./">
+                        <div>
+                            <label for="zoekbar">
+                                <span class="field-label">Zoek op naam:</span>
+                            </label>
+                            <input type="search" name="zoek" id="zoekbar">
+                        </div>
+
                         <input type="submit" name="sumbit" id="sumbit" value="zoek">
                     </form>
                     <ul>
