--- a/client/src/login/index.html
+++ b/client/src/login/index.html
@@ -26,9 +26,9 @@
         <div class="container">
             <header></header>
             <main>
-                <h1 class="logo" href="">Neighbourhoods</h1>
+                <h1 class="logo">Neighbourhoods</h1>
                 <div class="form">
-                    <form action="" id="login">
+                    <form action="./" id="login">
                         <div
                                 class="errorSummary"
                                 role="group"
