--- a/client/src/registreer/index.html
+++ b/client/src/registreer/index.html
@@ -26,8 +26,8 @@
         <div class="container">
             <header></header>
             <main>
-                <h1 class="logo" href="">Neighbourhoods</h1>
-                <form action="" id="registreer">
+                <h1 class="logo">Neighbourhoods</h1>
+                <form action="./" id="registreer">
                     <div
                         class="errorSummary"
                         role="group"
@@ -87,11 +87,8 @@
                         <label for="wachtwoord">
                             <span class="field-label">Wachtwoord:</span>
                             <span class="field-hint">
-                                <p>Een wachtwoord moet minstens bevatten:</p>
-                                <ul>
-                                    <li>7 karakters</li>
-                                    <li>1 cijfer</li>
-                                </ul>
+                                Een wachtwoord moet minstens 7 karakters en 1 cijfer bevatten
+
                             </span>
                         </label>
                         <input
