--- a/client/src/profiel/index.html
+++ b/client/src/profiel/index.html
@@ -44,7 +44,7 @@
 
             <main>
                 <div class="form">
-                    <form action="" id="profiel">
+                    <form action="./" id="profiel">
                         <h1 class="hidden">Profiel</h1>
                         <div
                                 class="errorSummary"
